frontend/test/should_fail/computations_decl_use_calls_type_mismatch_func_004.grg
using model_init;

function func(-e:E1->) : Edge
{
	return(e);
}

rule r
{
	-e1:E1->;
	modify {
		eval {
			def -e2:E1->;
			e2 = func(e1);
		}
	}
}

